Imported from https://solracq@github.com/solracq/seek-for-android.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = Automatically exported from code.google.com/p/seek-for-android
+[access "refs/*"]
+	owner = group user/Solracq (solracq)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Solracq (solracq)
+	label-Verified = -1..+1 group user/Solracq (solracq)
+	push = group user/Solracq (solracq)
+	read = group user/Solracq (solracq)
+	rebase = group user/Solracq (solracq)
+	removeReviewer = group user/Solracq (solracq)
+	submit = group user/Solracq (solracq)
+[access "refs/heads/*"]
+	create = group user/Solracq (solracq)
+	push = +force group user/Solracq (solracq)
+	pushMerge = group user/Solracq (solracq)
+	read = group user/Solracq (solracq)
+[access "refs/tags/*"]
+	push = group user/Solracq (solracq)
+	push = +force group user/Solracq (solracq)
